<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="#f8f8fa"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="61dp">

        <RelativeLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent">

            <EditText
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_size"

                android:drawableRight="@android:drawable/ic_search_category_default"
                android:hint="@string/hint"
                android:textSize="@dimen/edittext_text_size"/>

            <CheckBox
                android:id="@+id/cbAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/search"
                android:layout_marginTop="@dimen/margin_size"
                android:checked="false"
                android:onClick="checkboxClick"
                android:tag="0"

                android:text="@string/all"
                android:textSize="@dimen/checkbox_text_size"/>

            <CheckBox
                android:id="@+id/cbVdo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cbAll"
                android:layout_marginTop="@dimen/margin_size"
                android:checked="false"
                android:onClick="checkboxClick"
                android:tag="1"

                android:text="@string/video"
                android:textSize="@dimen/checkbox_text_size"/>

            <CheckBox
                android:id="@+id/cbAudio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cbVdo"
                android:layout_marginTop="@dimen/margin_size"
                android:checked="false"
                android:onClick="checkboxClick"
                android:tag="2"

                android:text="@string/audio"
                android:textSize="@dimen/checkbox_text_size"/>

            <CheckBox
                android:id="@+id/cbImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cbAudio"
                android:layout_marginTop="@dimen/margin_size"
                android:checked="false"
                android:onClick="checkboxClick"
                android:tag="3"

                android:text="@string/image"
                android:textSize="@dimen/checkbox_text_size"/>

            <CheckBox
                android:id="@+id/cbGIF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cbImage"
                android:layout_marginTop="@dimen/margin_size"
                android:checked="false"
                android:onClick="checkboxClick"
                android:tag="4"

                android:text="@string/gif"
                android:textSize="@dimen/checkbox_text_size"/>

            <CheckBox
                android:id="@+id/cbBooks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cbGIF"
                android:layout_marginTop="@dimen/margin_size"
                android:checked="false"
                android:onClick="checkboxClick"
                android:tag="5"

                android:text="@string/books"
                android:textSize="@dimen/checkbox_text_size"/>

            <CheckBox
                android:id="@+id/cbSoftware"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cbBooks"
                android:layout_marginTop="@dimen/margin_size"
                android:checked="false"
                android:onClick="checkboxClick"
                android:tag="6"

                android:text="@string/software"
                android:textSize="@dimen/checkbox_text_size"/>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>